--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,5 +1,5 @@
-name: sphinx-yaml-metadata
+name: sphinx-yaml-config
 type: sphinx
-requirements_file: doc/requirements.txt
+requirements_file: docs/requirements.txt
 python:
   version: 3
